# github-monitor

./: .gitignore  .worktreeinclude  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  mise.toml  orca.yaml  release-please-config.json
.claude-plugin/: plugin.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  release-please.yml  release-rust.yml
npm/: README.md
npm/github-monitor/: install.js  package.json
npm/github-monitor/lib/: resolve.js
npm/scripts/: generate-platform-packages.mjs
scripts/: publish-npm-bootstrap.sh
src/: exchange.rs  frames.rs  main.rs
worker/: README.md  package.json  tsconfig.json  wrangler.jsonc
worker/scripts/: channel-token.ts
worker/src/: auth.ts  filter.ts  github-access.ts  index.ts  relay-server.ts  rollup.ts  signature.ts  summarize.ts  types.ts
worker/tests/: auth.test.ts  e2e.emulate.test.ts  filter.test.ts  github-access.test.ts  rollup.test.ts  signature.test.ts  summarize.test.ts
